--- a/src/Styles/Night/night-projects.css
+++ b/src/Styles/Night/night-projects.css
@@ -104,17 +104,17 @@
 }
 
 .projects .two-lines-second span:nth-child(2) {
-  color: var(--sky-blue);
+  color: var(--green);
   padding-right: 0px;
 }
 
 .projects .two-lines-second span:nth-child(3) {
-  color: var(--green);
+  color: var(--yellow);
   padding-left: 5px;
 }
 
 .projects .two-lines-second span:nth-child(4) {
-  color: var(--yellow);
+  color: var(--pink);
 }
 
 
